--- a/assets/m-detail-payment.css
+++ b/assets/m-detail-payment.css
@@ -1,3 +1,4 @@
+/*Alvin Kamal Nasich*/
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather&display=swap");
 * {
   padding: 0;
